# Portfolio_DEDS

./: .pdm-python  README.md  pyproject.toml
data/processed/: filtered_products.xlsx  filtered_sales.xlsx  overview.xlsx  product_type_count.xlsx
data/raw/: SOURCE_DATABASE_MODEL.vpp  inventory_levels_train.csv  inventory_levels_volledig.csv  product_forecast_volledig.csv  titanic.csv
src/: DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  main.py  script.py  settings.py
src/Notebooks/Week_2_SDM/: SDM_NOTEBOOK.ipynb
src/Week_Opdrachten/WEEK_3_DWH&ETL/: DWH_NOTEBOOK.ipynb
src/Week_Opdrachten/Week_10_Opdrachten/: Script_W10_1.ipynb
src/Week_Opdrachten/Week_12_Opdrachten/: Neural_Networks_1.1.ipynb  Neural_Networks_1.2.ipynb  Neural_Networks_1.3.ipynb  Neural_Networks_2.ipynb  Neural_Networks_3.ipynb  Neural_Networks_5.ipynb
src/Week_Opdrachten/Week_13_Opdrachten/: KaggleLinReg.ipynb  KaggleTenFlow.ipynb
src/Week_Opdrachten/Week_15_PyGame/: agent.py  game.py  grid_world.py  q_learning_agent.py
src/Week_Opdrachten/Week_18_Opdrachten/: SinglyLinkedList.ipynb  mergesort.ipynb
src/Week_Opdrachten/Week_1_Opdrachten/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  main.py  settings.py
src/Week_Opdrachten/Week_2_SDM/: SDM_NOTEBOOK.ipynb
src/Week_Opdrachten/Week_4_Opdrachten/Notebooks/: SDM_ETL_COMPLETE.ipynb
src/Week_Opdrachten/Week_9_Opdrachten/: Classificatiemodellen.ipynb  Regressiemodel Script.ipynb  Script_W9_1.ipynb
